# Engine

./: .gitignore  CMakeLists.txt
Dependencies/_Win/GLEW/lib/: glew32d.lib
PCSource/: .gitignore  CMakeLists.txt
PCSource/Source/: BasicVertex.h  Camera.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GenericGame.cpp  GenericGame.h  GenericMesh.h  GenericRenderer.h  MapLoader.h  Mesh.h  Physics.h  PhysicsObject.cpp  PhysicsObject.h  RenderManager.h  Scene.cpp  Scene.h  Shader.h  level_1.txt  main.cpp
PCSource/Source/Shaders/: core.frag  core.vs  platform.frag  platform.vs
